--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,7 +2,7 @@
 
 
 header {
-  background-image: url(/assets/img/public/hero_section.png);
+  background-image: url(../img/public/hero_section.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -71,7 +71,7 @@ header h1 {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-image: url(/assets/img/First_order/first_order.png);
+  background-image: url(../img/First_order/first_order.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
