--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -106,6 +106,7 @@ header h1 {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  background-attachment: fixed;
   height: 100%;
 }
 
@@ -161,7 +162,7 @@ h1 {
   margin-top: 5px;
 }
 
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 476px) {
   .first_order {
     padding: 15px;
   }
@@ -193,8 +194,8 @@ h1 {
 }
 
 .card-img-top:hover {
-  transform: scale(1.05); /* تأثير تكبير عند التمرير */
-  transition: transform 0.3s ease; /* تأثير سلس عند الانتقال */
+  transform: scale(1.05); 
+  transition: transform 0.3s ease;
 }
 
 .about_us {
@@ -268,6 +269,11 @@ h1 {
   font-size: 30px;
   color: var(--mainColor);
   margin-right: 20px;
+}
+
+.footer i:hover{
+  color: var(--subColor);
+
 }
 
 .recent img {
